[GStreamer] FLAC Audio Format Support https://bugs.webkit.org/show_bug.cgi?id=245876

Reviewed by NOBODY (OOPS!).

Flac support was added in AppendPipeline, in case the SourceBuffer is audio/flac that would mean
typefind should be able to detect it and that the flac data is not muxed, thus requires no demuxing.

The MediaSourcePrivateGStreamer::addSourceBuffer() also now returns NotSupported in case the
containerType is not supported by AppendPipeline.

* Source/WebCore/platform/graphics/gstreamer/mse/AppendPipeline.cpp:
(WebCore::AppendPipeline::AppendPipeline):
* Source/WebCore/platform/graphics/gstreamer/mse/MediaSourcePrivateGStreamer.cpp:
(WebCore::MediaSourcePrivateGStreamer::addSourceBuffer):
* Source/WebCore/platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.cpp:
(WebCore::SourceBufferPrivateGStreamer::isContentTypeSupported):
* Source/WebCore/platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.h: